--- a/apache/default.conf
+++ b/apache/default.conf
@@ -1,3 +1,5 @@
+Listen 80
+
 <VirtualHost *:80>
 
 	ServerAdmin webmaster@localhost
@@ -11,8 +13,7 @@
 
                 Options +FollowSymLinks -Indexes
     </Directory>
-    #Alias /vcoach /var/www/sites/MyLaravel/public
-
+    Alias /test /var/www/sites/public
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
