--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "8081:80"
     volumes:
       - ./src:/var/www/sites 
-      - ./apache/default.conf:/etc/apache/sites-available/default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
+      - ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
     depends_on: 
       - php
       - mysql
@@ -20,6 +20,7 @@ services:
 
   mysql:
     image: mysql:5.7.30
+    container_name: mysql
     restart: unless-stopped
     tty: true
     ports:
@@ -34,6 +35,7 @@ services:
     networks:
       - laravel
   php:
+    container_name: php
     build:
       context: .
       dockerfile: Dockerfile
