--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
     ports: 
       - "8081:80"
     volumes:
-      #- ./src:/var/www/html
-      - ./src:/usr/local/apache2/htdocs
-      #- ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
+      - ./src:/var/www/html
+      #- ./src:/usr/local/apache2/htdocs # httpd container document root
+      - ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
+      - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
     depends_on: 
       - php
       - mysql
@@ -29,18 +30,20 @@ services:
     volumes:
       - ./mysql:/var/lib/mysql # necessario se il restart è uguale ad unless-stopped
     environment:
-      MYSQL_DATABASE: db_name
-      MYSQL_USER: "mysql_user"
-      MYSQL_PASSWORD: "secret"
-      MYSQL_ROOT_PASSWORD: "secret"
+      MYSQL_DATABASE: laravel_db
+      MYSQL_USER: dev
+      MYSQL_PASSWORD: 
+      MYSQL_ROOT_PASSWORD: 
     networks:
       - laravel
   php:
+    image: php:7.3.18-zts-alpine3.11
     container_name: php
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
+      #- ./src:/usr/local/apache2/htdocs # httpd container document root
       - ./src:/var/www/html
     ports:
       - "9000:9000"
