--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,10 @@ services:
       - "8081:80"
     volumes:
       - ./src:/var/www/html
-      #- ./src:/usr/local/apache2/htdocs # httpd container document root
-      - ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
-      - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
+      - ./src:/usr/local/apache2/htdocs # httpd container document root
+      - ./apache/my-httpd.conf:/usr/local/apache2/conf/httpd.conf
+      - ./apache/default.conf:/usr/local/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
+      - ./apache/default.conf:/usr/local/apache2/sites-enabled/000-default.conf
     depends_on: 
       - php
       - mysql
