changed php container into php-apache. stable version laravel

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -1,33 +1,17 @@
-Listen 80
+<VirtualHost *:80>
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html
 
-# <VirtualHost *:80>
-# 	ServerAdmin webmaster@localhost
-# 	DocumentRoot /var/www/html
+	<Directory /var/www/web/public>
+        AllowOverride All
+        Options None
+        Order allow,deny
+        allow from all
 
-# 	<Directory /var/www/sites/>
-#                 AllowOverride All
-#                 Options None
-#                 Order allow,deny
-#                 allow from all
+        Options +FollowSymLinks -Indexes
+    </Directory>
+    Alias /web /var/www/web/public
 
-#                 Options +FollowSymLinks -Indexes
-#     </Directory>
-#     Alias /test /var/www/sites/public
-
-# 	ErrorLog ${APACHE_LOG_DIR}/error.log
-# 	CustomLog ${APACHE_LOG_DIR}/access.log combined
-# </VirtualHost>
-
-
-DocumentRoot /var/www/html/laravel_site/public
-
-ErrorLog ${APACHE_LOG_DIR}/error.log
-CustomLog ${APACHE_LOG_DIR}/access.log combined
-
-<Directory /var/www/html/laravel_site/public>
-    Options Indexes FollowSymLinks Includes ExecCGI
-    AllowOverride All
-    Require all granted
-    # RewriteEngine On
-    # RewriteRule ^(.*)$ public/$1 [L]
-</Directory>
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
