--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,22 @@ networks:
   laravel:
 
 services:
-  apache:
-    image: httpd:latest
-    container_name: apache
-    ports: 
-      - "8081:80"
-    volumes:
-      - ./src:/var/www/html
-      #- ./src:/usr/local/apache2/htdocs # httpd container document root
-      - ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
-      - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
-    depends_on: 
-      - php
-      - mysql
-    networks:
-      - laravel
+  # apache:
+  #   image: httpd:latest
+  #   container_name: apache
+  #   ports: 
+  #     - "8081:80"
+  #   volumes:
+  #     - ./src:/var/www/html
+  #     - ./src:/usr/local/apache2/htdocs # httpd container document root
+  #     - ./apache/my-httpd.conf:/usr/local/apache2/conf/httpd.conf
+  #     - ./apache/default.conf:/usr/local/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
+  #     - ./apache/default.conf:/usr/local/apache2/sites-enabled/000-default.conf
+  #   depends_on: 
+  #     - php
+  #     - mysql
+  #   networks:
+  #     - laravel
 
   mysql:
     image: mysql:5.7.30
@@ -32,21 +33,23 @@ services:
     environment:
       MYSQL_DATABASE: laravel_db
       MYSQL_USER: dev
-      MYSQL_PASSWORD: 
-      MYSQL_ROOT_PASSWORD: 
+      MYSQL_PASSWORD: aa
+      MYSQL_ROOT_PASSWORD: aa
     networks:
       - laravel
   php:
-    image: php:7.3.18-zts-alpine3.11
     container_name: php
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
       #- ./src:/usr/local/apache2/htdocs # httpd container document root
-      - ./src:/var/www/html
+      - ./src:/var/www/web
+      - ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
+      - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
     ports:
       - "9000:9000"
+      - "8081:80"
     networks:
       - laravel
 
