--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,6 @@ networks:
   laravel:
 
 services:
-  # apache:
-  #   image: httpd:latest
-  #   container_name: apache
-  #   ports: 
-  #     - "8081:80"
-  #   volumes:
-  #     - ./src:/var/www/html
-  #     - ./src:/usr/local/apache2/htdocs # httpd container document root
-  #     - ./apache/my-httpd.conf:/usr/local/apache2/conf/httpd.conf
-  #     - ./apache/default.conf:/usr/local/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
-  #     - ./apache/default.conf:/usr/local/apache2/sites-enabled/000-default.conf
-  #   depends_on: 
-  #     - php
-  #     - mysql
-  #   networks:
-  #     - laravel
-
   mysql:
     image: mysql:5.7.30
     container_name: mysql
@@ -43,9 +26,8 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      #- ./src:/usr/local/apache2/htdocs # httpd container document root
       - ./src:/var/www/web
-      - ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per laravel dobbiamo cambiare dove l'apache legge i file. sovrascriviamo il default.conf
+      - ./apache/default.conf:/etc/apache2/sites-available/000-default.conf # per creare i virtualhost sovrascriviamo il default.conf
       - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
     ports:
       - "9000:9000"
